# r2d2-compactor

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
docs/: COMPRESION-EXPLICADA.md  GUIA-DE-USUARIO.md  NOTA-carrera-running.md
ffmpeg/: COLOCAR_FFMPEG_AQUI.txt
installer/: FFMPEG-FUENTES.txt  installer.nsi
src/: app.rs  ffmpeg.rs  install.rs  main.rs  model.rs  queue.rs  update.rs  util.rs
