[package]
name = "compresor-evidencias"
version = "1.0.0"
edition = "2021"
description = "Compresor de videos de evidencia para Aforo (two-pass H.264 via FFmpeg)"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow", "default_fonts", "persistence"] }
egui = "0.24"
rfd = "0.12"
home = "=0.5.9"
hashbrown = "=0.14.5"
indexmap = "=2.2.6"
ahash = "=0.8.11"
url = "=2.4.1"

[profile.release]
opt-level = 3
lto = true
strip = true
