[package]
name = "r2d2-compactor"
version = "1.0.6"
edition = "2021"
description = "Compresor de videos de evidencia (two-pass H.264 via FFmpeg) con auto-actualización"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow", "default_fonts", "persistence"] }
egui = "0.24"
rfd = "0.12"
# Auto-actualización: HTTP + verificación de integridad + reemplazo del binario en uso.
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
self-replace = "1"
home = "=0.5.9"
hashbrown = "=0.14.5"

indexmap = "=2.2.6"
ahash = "=0.8.11"
url = "=2.4.1"

# eframe 0.24 declara winapi sin features, pero su app_icon.rs usa winuser/windef.
# Al cross-compilar a Windows eso rompe; declararlas aquí las activa vía unificación
# de features de Cargo (solo afecta al target Windows).
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

# build.rs: incrusta el icono del .exe (Explorador de Windows) a partir de
# assets/icon.png. Solo se usan al compilar para Windows.
[build-dependencies]
winresource = "0.1"
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
